avoid horizontal scroll bar

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,10 @@
   margin: auto;
 }
 
+.centered{
+  margin: auto;
+}
+
 .align-left{
   text-align: left;
 }
